<resources>
    <string name="app_name">DejaPhoto</string>
    <string name="action_settings">Settings</string>
    <string name="action_friends_list">Friends List</string>
    <string name="location">Unknown Location</string>
    <string name="title_activity_settings">Settings</string>
    <string name="time_spinner_text">Time Until Next Photo:</string>
    <string name="location_switch">Use Location:</string>
    <string name="dow_switch">Use Day of Week:</string>
    <string name="tod_switch">Use Time of Day:</string>
    <string name="recent_switch">Use Recent Photos:</string>
    <string name="karma_switch">Use Karma:</string>
    <string name="cycle_options">Cycle Options:</string>
    <string name="choose_photos">Choose Photo</string>
    <string name="own_photos_switch">View Your Photos:</string>
    <string name="friends_photos_switch">View Friends Photos:</string>
    <string name="share_photos_switch">Share Photos:</string>
    <string name="friends_list_entry">Enter a friend\'s email</string>
    <string name="add_friend">Add Friend</string>
    <string name="remove_friend">Remove Friend</string>
    <string name="location_name_input">Enter a New Location Name</string>
    <string name="initial_karma_count">0</string>


    <string-array name="time_entries">
        <item name="10 seconds">10 seconds</item>
        <item name="15 seconds">15 seconds</item>
        <item name="20 seconds">20 seconds</item>
        <item name="30 seconds">30 seconds</item>
        <item name="45 seconds">45 seconds</item>
        <item name="60 seconds">60 seconds</item>
    </string-array>

    <string-array name="time_values">
        <item>10000</item>
        <item>15000</item>
        <item>20000</item>
        <item>30000</item>
        <item>45000</item>
        <item>60000</item>
    </string-array>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_out">Sign out</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_launch_app">Launch DejaPhoto</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
    completions." </string>
</resources>
