<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cse110.group6.dejaphoto.FriendsList">

    <EditText
        android:id="@+id/friendsListEntry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:text="@string/friends_list_entry"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/addFriendButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:onClick="addFriend"
            android:text="@string/add_friend" />

        <!--
        This is a bit of a hack, but I'm tired of dealing
        with linear layout
        -->
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/removeFriendButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_gravity="right"
            android:onClick="removeFriend"
            android:text="@string/remove_friend"/>

    </LinearLayout>

    <ListView
        android:id="@+id/friendsListView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"></ListView>

</LinearLayout>
