<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cse110.group6.dejaphoto.Settings">

    <TextView
        android:id="@+id/spinnerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_spinner_text"
        android:textSize="20sp"
        android:textColor="#000000"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        />

    <Spinner
        android:id="@+id/spinner_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:spinnerMode="dialog"
        android:entries="@array/time_entries"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        ></Spinner>

    <Switch
        android:id="@+id/locationSwitch"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/location_switch"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerTitle"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp" />

    <Switch
        android:id="@+id/dowSwitch"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/dow_switch"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationSwitch"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp" />

    <Switch
        android:id="@+id/todSwitch"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/tod_switch"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dowSwitch"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp" />

    <Switch
        android:id="@+id/recentSwitch"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/recent_switch"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/todSwitch"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp" />

    <Switch
        android:id="@+id/karmaSwitch"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/karma_switch"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recentSwitch"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp" />

    <!--<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="LOCATION:"
        android:textSize="25sp"
        android:layout_marginTop="60dp"
        />


    <ImageButton
        android:id="@+id/locationToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick=""
        app:srcCompat="@android:drawable/checkbox_on_background"
        android:layout_marginTop="-38dp"
        android:layout_marginStart="300dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="DAY OF THE WEEK:"
        android:textSize="25sp"
        android:layout_marginTop="60dp"
        />

    <ImageButton
        android:id="@+id/dowToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick=""
        app:srcCompat="@android:drawable/checkbox_on_background"
        android:layout_marginTop="-35dp"
        android:layout_marginStart="300dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TIME OF DAY:"
        android:textSize="25sp"
        android:layout_marginTop="50dp"
        />

    <ImageButton
        android:id="@+id/towToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick=""
        app:srcCompat="@android:drawable/checkbox_on_background"
        android:layout_marginTop="-35dp"
        android:layout_marginStart="300dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="KARMA:"
        android:textSize="25sp"
        android:layout_marginTop="50dp"
        />

    <ImageButton
        android:id="@+id/karmaToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick=""
        app:srcCompat="@android:drawable/checkbox_on_background"
        android:layout_marginTop="-40dp"
        android:layout_marginStart="300dp"
        />-->



</android.support.constraint.ConstraintLayout>
